# deb-rs

./: AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-doc.yml  cargo-test.yml
benches/: Cargo.toml
benches/benches/: dependency.rs  paragraph.rs  version_parse.rs  version_to_string.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_822.rs  fuzz_target_822_serde.rs  fuzz_target_dependency.rs  fuzz_target_version.rs  fuzz_target_version_dpkg.rs
src/: errors.rs  lib.rs  release.rs  releases.rs
src/architecture/: architecture.rs  mod.rs  multiarch.rs
src/build_profile/: build_profile.rs  mod.rs
src/control/: architectures.rs  checksum.rs  control.pest  date_time.rs  debian_rfc_2822.pest  delimited.rs  delimited_strings.rs  digest.rs  file_digest.rs  macros.rs  mod.rs  number.rs  openpgp.rs  paragraph.rs  pest.rs  priority.rs  real_control_tests.rs  space_delimited_strings.rs  traits.rs
src/control/apt/: mod.rs  sources_list.rs  yes_no_force.rs
src/control/archive/: mod.rs  package.rs  packages.rs  release.rs  source.rs
src/control/changes/: changes.rs  closes.rs  file.rs  file_checksum.rs  files.rs  mod.rs
src/control/dak/: break_the_archive.rs  dm.rs  mod.rs  process_upload.rs
src/control/de/: mod.rs  outer.rs  paragraph.rs
src/control/dsc/: dsc.rs  mod.rs  package_list.rs
src/control/package/: binary_control.rs  buildinfo.rs  changes.rs  common_source_control.rs  control.rs  dsc.rs  file.rs  mod.rs  package_list.rs  source_control.rs  source_name.rs
src/control/queued/: action.rs  command.rs  mod.rs
src/control/ser/: mod.rs  paragraph.rs
src/dependency/: architecture.rs  build_profile.rs  dependency.pest  dependency.rs  dependency_filter.rs  mod.rs  package.rs  pest.rs  possibility.rs  relation.rs  tests.rs  version.rs
src/version/: compare.rs  mod.rs  tests_dpkg.rs  version.rs
tests/: README.md
tests/generated-fixture-tests/: Makefile  autogenerated.rs  common.rs  main.rs  rebuild.sh
tests/generated-fixture-tests/fixtures/unsigned/apt/sources/: ubuntu.good  weird.bad
tests/generated-fixture-tests/fixtures/unsigned/archive/package/: small.bad  small.good
tests/generated-fixture-tests/fixtures/unsigned/archive/release/: stable-release.bad
tests/generated-fixture-tests/fixtures/unsigned/package/binarycontrol/: cargo-1.82.0+dfsg1-2.good  hdparm-9.65+ds-1.1.good  hello_2.10-3.good  nopackage-hello_2.10-3.bad  udeb-cdrom-retriever-1.58.good
tests/generated-fixture-tests/fixtures/unsigned/package/changes/: hello_2.10-3_amd64.changes.good  noversion-hello_2.10-3_amd64.changes.bad  (+1 more)
tests/generated-fixture-tests/fixtures/unsigned/queued/: cancel.good  empty.bad  multi.good  reschedule.good  rm-delayed.good  rm-hello.good  rm-searchdirs.good
(+4 files in other folders)
